[metadata]
name = pushgateway_client
version = 0.0.12
author = Tay
author_email = tay3223@qq.com
description = Python3专用的pushgateway客户端，可以向Pushgateway中推送指标数据，支持多标签设定
long_description = file: README.md
long_description_content_type = text/markdown
url = https://blog.taycc.com/pages/opensource/pushgateway_client.html
project_urls =
    使用文档 = https://blog.taycc.com/pages/opensource/pushgateway_client.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src